--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/PageLayoutBlockGrid.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/PageLayoutBlockGrid.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <DataType Key="569d86a6-7fc6-4fe8-bbd8-13d378bcb557" Alias="Page Layout Block Grid" Level="3">
   <Info>
     <Name>Page Layout Block Grid</Name>
@@ -39,7 +39,7 @@
         }
       ],
       "contentElementTypeKey": "f23cebb3-8a80-43de-927c-488fd562a525",
-      "label": "One Column - Layout",
+      "label": "**One Column** - **Layout** ${ internalBlockLabel ? \u0022 - \u0022 \u002B internalBlockLabel  : \u0022\u0022 }",
       "editorSize": "medium",
       "inlineEditing": false,
       "forceHideContentEditorInOverlay": false,
@@ -53,7 +53,7 @@
       "allowInAreas": true,
       "areas": [],
       "contentElementTypeKey": "b757d60f-af8d-4a32-b249-ff886ca3d8c8",
-      "label": "**Banner** - {=internalBlockLabel}",
+      "label": "**Banner** - ${internalBlockLabel || jumpMenuHeading }",
       "editorSize": "medium",
       "inlineEditing": false,
       "forceHideContentEditorInOverlay": false,
@@ -67,7 +67,7 @@
       "allowInAreas": true,
       "areas": [],
       "contentElementTypeKey": "5f1b684f-901d-417a-b68d-1309dae4dc3f",
-      "label": "**Full Width Image** - {=internalBlockLabel}",
+      "label": "**Full Width Image** - ${internalBlockLabel || jumpMenuHeading }",
       "editorSize": "medium",
       "inlineEditing": false,
       "forceHideContentEditorInOverlay": false,
@@ -81,7 +81,7 @@
       "allowInAreas": true,
       "areas": [],
       "contentElementTypeKey": "f82f9acc-c2fb-4a8d-8316-f1ca775017b5",
-      "label": "**Rich Text Section** - {=internalBlockLabel}",
+      "label": "**Rich Text Section** - ${(internalBlockLabel || text || jumpMenuHeading) | stripHtml | wordLimit:10 }",
       "editorSize": "medium",
       "inlineEditing": false,
       "forceHideContentEditorInOverlay": false,
@@ -123,7 +123,7 @@
       "allowInAreas": true,
       "areas": [],
       "contentElementTypeKey": "623e3c3b-ee3e-452c-b623-d125c5b7f36f",
-      "label": "**Carousel** - {=internalBlockLabel}",
+      "label": "**Carousel** - ${internalBlockLabel || heading || jumpMenuHeading || subHeading }",
       "editorSize": "medium",
       "inlineEditing": false,
       "forceHideContentEditorInOverlay": false,
@@ -138,7 +138,7 @@
       "areas": [],
       "contentElementTypeKey": "59431549-ce1d-4e19-b389-67655b1dbd5b",
       "settingsElementTypeKey": "b5f95b3f-3836-4858-8ef4-7edf5590025e",
-      "label": "**Gallery** - {=internalBlockLabel}",
+      "label": "**Gallery** - ${internalBlockLabel || heading || jumpMenuHeading || subHeading }",
       "editorSize": "medium",
       "inlineEditing": false,
       "forceHideContentEditorInOverlay": false,
@@ -153,7 +153,7 @@
       "areas": [],
       "contentElementTypeKey": "c857eedb-27dc-4058-9c40-3f5a0e8c7bcc",
       "settingsElementTypeKey": "c4ad1ca6-404b-405b-88b1-487d7a0eb89b",
-      "label": "**Blog Listing** - {=internalBlockLabel}",
+      "label": "**Blog Listing** - ${internalBlockLabel || heading || jumpMenuHeading || subHeading }",
       "editorSize": "medium",
       "inlineEditing": false,
       "forceHideContentEditorInOverlay": false,
