--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/src/UmbracoHeadlessBFF.SiteApi.Web/appsettings.json
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/src/UmbracoHeadlessBFF.SiteApi.Web/appsettings.json
@@ -23,6 +23,7 @@
       "FailSafeIsEnabled": true,
       "FailSafeMaxDuration": 10800,
       "DistributedCacheFailSafeMaxDuration": 93600,
+      "DistributedLocking": false,
       "FailSafeThrottleDuration": 300,
       "FactorySoftTimeoutMs": 150,
       "FactoryHardTimeout": 30,
