public media API locally. Remove pre-set Global Umbraco ID from template generation

--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/appsettings.Local.json
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/appsettings.Local.json
@@ -13,12 +13,14 @@
       "Global": {
         "Timeout": "1.00:00:00",
         "Smtp": {
-          "From": "no-reply@localhost",
-          "Host": "localhost"
+          "From": "no-reply@localhost"
         }
       },
       "DeliveryApi": {
-        "PublicAccess": true
+        "PublicAccess": true,
+        "Media": {
+          "PublicAccess": true
+        }
       },
       "Runtime": {
         "Mode": "Development"
