--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/appsettings.json
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/appsettings.json
@@ -89,7 +89,9 @@
         }
       },
       "Global": {
+        //#if (false) 
         "Id": "eb281fdb-b0b5-41ab-a107-dd0a655c514f",
+        //#endif
         "TimeOut": "01:00:00"
       },
       "Runtime": {
