--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleHeadingWithSocialLinksBlockList.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleHeadingWithSocialLinksBlockList.config
@@ -2,8 +2,8 @@
 <DataType Key="fb8a1ab8-fa56-4dc5-a4ff-81278cf674f6" Alias="Single Heading With Social Links Block List" Level="4">
   <Info>
     <Name>Single Heading With Social Links Block List</Name>
-    <EditorAlias>Umbraco.BlockList</EditorAlias>
-    <EditorUIAlias>Umb.PropertyEditorUi.BlockList</EditorUIAlias>
+    <EditorAlias>Umbraco.SingleBlock</EditorAlias>
+    <EditorUIAlias>Umb.PropertyEditorUi.BlockSingle</EditorUIAlias>
     <Folder>Custom/Block+Lists/Single+Item</Folder>
   </Info>
   <Config><![CDATA[{
@@ -16,10 +16,6 @@
     }
   ],
   "useInlineEditingAsDefault": false,
-  "useLiveEditing": false,
-  "useSingleBlockMode": false,
-  "validationLimit": {
-    "max": 1
-  }
+  "useLiveEditing": false
 }]]></Config>
 </DataType>
