--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/ContentTypes/fullwidthimage.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/ContentTypes/fullwidthimage.config
@@ -28,8 +28,8 @@
       <Key>8efa06f2-5226-455e-ab05-3a658d766991</Key>
       <Name>Image</Name>
       <Alias>image</Alias>
-      <Definition>0405c199-48e4-4010-83f3-be7f9b313478</Definition>
-      <Type>Umbraco.BlockList</Type>
+      <Definition>9c869ed4-c8bf-49c7-acd8-68a70cc91a12</Definition>
+      <Type>Umbraco.SingleBlock</Type>
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
