--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleImageBlockList.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleImageBlockList.config
@@ -2,8 +2,8 @@
 <DataType Key="9c869ed4-c8bf-49c7-acd8-68a70cc91a12" Alias="Single Image Block List" Level="4">
   <Info>
     <Name>Single Image Block List</Name>
-    <EditorAlias>Umbraco.BlockList</EditorAlias>
-    <EditorUIAlias>Umb.PropertyEditorUi.BlockList</EditorUIAlias>
+    <EditorAlias>Umbraco.SingleBlock</EditorAlias>
+    <EditorUIAlias>Umb.PropertyEditorUi.BlockSingle</EditorUIAlias>
     <Folder>Custom/Block+Lists/Single+Item</Folder>
   </Info>
   <Config><![CDATA[{
@@ -16,10 +16,6 @@
     }
   ],
   "useInlineEditingAsDefault": false,
-  "useLiveEditing": false,
-  "useSingleBlockMode": false,
-  "validationLimit": {
-    "max": 1
-  }
+  "useLiveEditing": false
 }]]></Config>
 </DataType>
