Block grid fallbacks

--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleHeadingWithSocialLinksBlockList.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleHeadingWithSocialLinksBlockList.config
@@ -10,7 +10,7 @@
   "blocks": [
     {
       "contentElementTypeKey": "1786273f-196e-4a2d-a907-6d587dffa079",
-      "label": "**Heading with Social Links** - {=heading}",
+      "label": "**Heading with Social Links** - {=heading | fallback:No Heading}",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false
     }
