--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleImageBlockList.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleImageBlockList.config
@@ -10,7 +10,7 @@
   "blocks": [
     {
       "contentElementTypeKey": "93de461b-8584-4e6e-9a18-8a5285863495",
-      "label": "**Responsive Image** - {=internalBlockLabel}",
+      "label": "**Responsive Image** - ${ internalBlockLabel || altText || \u0022No text\u0022 } ",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false
     }
