--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleMandatoryImageVideoBlockList.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleMandatoryImageVideoBlockList.config
@@ -10,26 +10,25 @@
   "blocks": [
     {
       "contentElementTypeKey": "269b1f92-9416-4267-925b-9f7039510293",
-      "label": "**Embed Video** - {=internalBlockLabel}",
+      "label": "**Embed Video** - ${ internalBlockLabel || (videoProvider \u002B \u0022: \u0022 \u002B videoId) }",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false
     },
     {
       "contentElementTypeKey": "2c1263bb-7bfc-48e5-b79c-13832bfa8a5f",
-      "label": "**Media Library Video** - {=internalBlockLabel}",
+      "label": "**Media Library Video** - ${internalBlockLabel || \u0022No label\u0022 }",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false
     },
     {
       "contentElementTypeKey": "93de461b-8584-4e6e-9a18-8a5285863495",
-      "label": "**Responsive Image** - {=internalBlockLabel}",
+      "label": "**Responsive Image** - ${ internalBlockLabel || altText || \u0022No text\u0022}",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false
     }
   ],
   "useInlineEditingAsDefault": false,
   "useLiveEditing": false,
-  "useSingleBlockMode": false,
   "validationLimit": {
     "min": 1,
     "max": 1
