V17/single block editor usage + block label improvements (#25)
* initial changes for using new Single Block editor

* Block grid fallbacks

--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleHeadingWithSocialLinksBlockList.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleHeadingWithSocialLinksBlockList.config
@@ -2,24 +2,20 @@
 <DataType Key="fb8a1ab8-fa56-4dc5-a4ff-81278cf674f6" Alias="Single Heading With Social Links Block List" Level="4">
   <Info>
     <Name>Single Heading With Social Links Block List</Name>
-    <EditorAlias>Umbraco.BlockList</EditorAlias>
-    <EditorUIAlias>Umb.PropertyEditorUi.BlockList</EditorUIAlias>
+    <EditorAlias>Umbraco.SingleBlock</EditorAlias>
+    <EditorUIAlias>Umb.PropertyEditorUi.BlockSingle</EditorUIAlias>
     <Folder>Custom/Block+Lists/Single+Item</Folder>
   </Info>
   <Config><![CDATA[{
   "blocks": [
     {
       "contentElementTypeKey": "1786273f-196e-4a2d-a907-6d587dffa079",
-      "label": "**Heading with Social Links** - {=heading}",
+      "label": "**Heading with Social Links** - {=heading | fallback:No Heading}",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false
     }
   ],
   "useInlineEditingAsDefault": false,
-  "useLiveEditing": false,
-  "useSingleBlockMode": false,
-  "validationLimit": {
-    "max": 1
-  }
+  "useLiveEditing": false
 }]]></Config>
 </DataType>
