--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleImageBlockList.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleImageBlockList.config
@@ -2,24 +2,20 @@
 <DataType Key="9c869ed4-c8bf-49c7-acd8-68a70cc91a12" Alias="Single Image Block List" Level="4">
   <Info>
     <Name>Single Image Block List</Name>
-    <EditorAlias>Umbraco.BlockList</EditorAlias>
-    <EditorUIAlias>Umb.PropertyEditorUi.BlockList</EditorUIAlias>
+    <EditorAlias>Umbraco.SingleBlock</EditorAlias>
+    <EditorUIAlias>Umb.PropertyEditorUi.BlockSingle</EditorUIAlias>
     <Folder>Custom/Block+Lists/Single+Item</Folder>
   </Info>
   <Config><![CDATA[{
   "blocks": [
     {
       "contentElementTypeKey": "93de461b-8584-4e6e-9a18-8a5285863495",
-      "label": "**Responsive Image** - {=internalBlockLabel}",
+      "label": "**Responsive Image** - ${ internalBlockLabel || altText || \u0022No text\u0022 } ",
       "editorSize": "medium",
       "forceHideContentEditorInOverlay": false
     }
   ],
   "useInlineEditingAsDefault": false,
-  "useLiveEditing": false,
-  "useSingleBlockMode": false,
-  "validationLimit": {
-    "max": 1
-  }
+  "useLiveEditing": false
 }]]></Config>
 </DataType>
