--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/Directory.Packages.props
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/Directory.Packages.props
@@ -9,14 +9,14 @@
     <PackageVersion Include="Mole.StorageProviders.AzureBlob.TemporaryFile" Version="17.1.0" />
     <PackageVersion Include="Scalar.AspNetCore" Version="2.11.10" />
     <PackageVersion Include="Serilog.AspNetCore" Version="10.0.0" />
-    <PackageVersion Include="Umbraco.Cms" Version="17.0.2" />
+    <PackageVersion Include="Umbraco.Cms" Version="17.1.0-rc" />
     <PackageVersion Include="Serilog.Enrichers.ClientInfo" Version="2.8.0" />
     <PackageVersion Include="Serilog.Exceptions" Version="8.4.0" />
     <PackageVersion Include="System.Text.Json" Version="9.0.10" />
-    <PackageVersion Include="Umbraco.Cms.Core" Version="17.0.2" />
-    <PackageVersion Include="Umbraco.Cms.Infrastructure" Version="17.0.2" />
-    <PackageVersion Include="Umbraco.Cms.Web.Common" Version="17.0.2" />
-    <PackageVersion Include="Umbraco.Cms.Web.Website" Version="17.0.2" />
+    <PackageVersion Include="Umbraco.Cms.Core" Version="17.1.0-rc" />
+    <PackageVersion Include="Umbraco.Cms.Infrastructure" Version="17.1.0-rc" />
+    <PackageVersion Include="Umbraco.Cms.Web.Common" Version="17.1.0-rc" />
+    <PackageVersion Include="Umbraco.Cms.Web.Website" Version="17.1.0-rc" />
     <PackageVersion Include="Umbraco.Community.Contentment" Version="6.0.2" />
     <PackageVersion Include="Umbraco.Community.DataProtection" Version="17.0.1" />
     <PackageVersion Include="Umbraco.Community.DeliveryApiExtensions" Version="17.0.0" />
