--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleImageVideoBlockList.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/DataTypes/SingleImageVideoBlockList.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="57544290-6ca3-4317-8350-1ce0005bde1c" Alias="Single Mandatory Image/Video Block List" Level="4">
+<DataType Key="57544290-6ca3-4317-8350-1ce0005bde1c" Alias="Single Image/Video Block List" Level="4">
   <Info>
-    <Name>Single Mandatory Image/Video Block List</Name>
-    <EditorAlias>Umbraco.BlockList</EditorAlias>
-    <EditorUIAlias>Umb.PropertyEditorUi.BlockList</EditorUIAlias>
+    <Name>Single Image/Video Block List</Name>
+    <EditorAlias>Umbraco.SingleBlock</EditorAlias>
+    <EditorUIAlias>Umb.PropertyEditorUi.BlockSingle</EditorUIAlias>
     <Folder>Custom/Block+Lists/Single+Item</Folder>
   </Info>
   <Config><![CDATA[{
@@ -28,10 +28,6 @@
     }
   ],
   "useInlineEditingAsDefault": false,
-  "useLiveEditing": false,
-  "validationLimit": {
-    "min": 1,
-    "max": 1
-  }
+  "useLiveEditing": false
 }]]></Config>
 </DataType>
