--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,8 @@
 version: 2
 updates:
   - package-ecosystem: "nuget"
-    directory: "/"
+    directories: 
+      - "/project-templates/content/umbraco-headless-bff/**/*"
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 5
@@ -21,7 +22,7 @@ updates:
           - "version-update:semver-major"
   
   - package-ecosystem: "dotnet-sdk"
-    directory: "/"
+    directory: "/project-templates/content/umbraco-headless-bff/"
     schedule:
       interval: "weekly"
       day: "wednesday"
