--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/appsettings.json
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/appsettings.json
@@ -86,10 +86,15 @@
         "Media": {
           "Enabled": true,
           "PublicAccess": false
+        },
+        "OutputCache": {
+          "Enabled": true,
+          "ContentDuration": "01:00:00",
+          "MediaDuration": "01:00:00"
         }
       },
       "Global": {
-        //#if (false) 
+        //#if (false)
         "Id": "eb281fdb-b0b5-41ab-a107-dd0a655c514f",
         //#endif
         "TimeOut": "01:00:00"
