--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Modules.Common/UmbracoHeadlessBFF.Cms.Modules.Common.csproj
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Modules.Common/UmbracoHeadlessBFF.Cms.Modules.Common.csproj
@@ -13,6 +13,8 @@
       <PackageReference Include="Umbraco.Cms.Web.Common" />
       <PackageReference Include="Umbraco.Cms.Web.Website" />
       <PackageReference Include="Umbraco.Community.Contentment" />
+      <PackageReference Include="ZiggyCreatures.FusionCache.AspNetCore.OutputCaching" />
+      <PackageReference Include="ZiggyCreatures.FusionCache.Serialization.NeueccMessagePack" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\..\..\UmbracoHeadlessBFF.SharedModules\src\UmbracoHeadlessBFF.SharedModules.Cms\UmbracoHeadlessBFF.SharedModules.Cms.csproj" />
