Use CDN url package to make media link resolution simpler.
Fix alt text mapping from media items

Redirect api returns Ok with null value results so they are cached for normal amount of time

--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/appsettings.json
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/appsettings.json
@@ -124,6 +124,10 @@
           "ConnectionString": "<from-secrets>",
           "ContainerName": "<from-env-config>"
         }
+      },
+      "Cdn": {
+        "Url": "<from-env-config>",
+        "RemoveMediaFromPath": false
       }
     }
   },
