Add/fix single item block list mode related fields and usync updates

--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/ContentTypes/banneritem.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/ContentTypes/banneritem.config
@@ -29,7 +29,7 @@
       <Name>BackgroundMedia</Name>
       <Alias>backgroundMedia</Alias>
       <Definition>57544290-6ca3-4317-8350-1ce0005bde1c</Definition>
-      <Type>Umbraco.BlockList</Type>
+      <Type>Umbraco.SingleBlock</Type>
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
