--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/ContentTypes/listingsettings.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/ContentTypes/listingsettings.config
@@ -58,7 +58,7 @@
       <Name>Image</Name>
       <Alias>listingImage</Alias>
       <Definition>9c869ed4-c8bf-49c7-acd8-68a70cc91a12</Definition>
-      <Type>Umbraco.BlockList</Type>
+      <Type>Umbraco.SingleBlock</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
