--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/ContentTypes/sitesettings.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/ContentTypes/sitesettings.config
@@ -108,7 +108,7 @@ If left empty, first domain entry in Culture & Hostnames will be used]]></Descri
       <Name>Social Links</Name>
       <Alias>footerSocialLinks</Alias>
       <Definition>fb8a1ab8-fa56-4dc5-a4ff-81278cf674f6</Definition>
-      <Type>Umbraco.BlockList</Type>
+      <Type>Umbraco.SingleBlock</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
