--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/ContentTypes/spotlight.config
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/uSync/v17/ContentTypes/spotlight.config
@@ -46,7 +46,7 @@
       <Name>Media</Name>
       <Alias>media</Alias>
       <Definition>57544290-6ca3-4317-8350-1ce0005bde1c</Definition>
-      <Type>Umbraco.BlockList</Type>
+      <Type>Umbraco.SingleBlock</Type>
       <Mandatory>true</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
