further caching improvements. Delivery API caching isolated from caching on the rest of controllers, with custom default policy.

--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Modules.Common/UmbracoHeadlessBFF.Cms.Modules.Common.csproj
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Modules.Common/UmbracoHeadlessBFF.Cms.Modules.Common.csproj
@@ -13,7 +13,7 @@
       <PackageReference Include="Umbraco.Cms.Web.Website" />
       <PackageReference Include="Umbraco.Community.Contentment" />
       <PackageReference Include="ZiggyCreatures.FusionCache.AspNetCore.OutputCaching" />
-      <PackageReference Include="ZiggyCreatures.FusionCache.Serialization.NeueccMessagePack" />
+      <PackageReference Include="ZiggyCreatures.FusionCache.Serialization.CysharpMemoryPack" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\..\..\UmbracoHeadlessBFF.SharedModules\src\UmbracoHeadlessBFF.SharedModules.Cms\UmbracoHeadlessBFF.SharedModules.Cms.csproj" />
