--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/src/UmbracoHeadlessBFF.SiteApi.Modules.Common/UmbracoHeadlessBFF.SiteApi.Modules.Common.csproj
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/src/UmbracoHeadlessBFF.SiteApi.Modules.Common/UmbracoHeadlessBFF.SiteApi.Modules.Common.csproj
@@ -5,7 +5,7 @@
     <ItemGroup>
       <PackageReference Include="Asp.Versioning.Http" />
       <PackageReference Include="ZiggyCreatures.FusionCache.AspNetCore.OutputCaching" />
-      <PackageReference Include="ZiggyCreatures.FusionCache.Serialization.NeueccMessagePack" />
+      <PackageReference Include="ZiggyCreatures.FusionCache.Serialization.CysharpMemoryPack" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\..\..\UmbracoHeadlessBFF.SharedModules\src\UmbracoHeadlessBFF.SharedModules.Cms\UmbracoHeadlessBFF.SharedModules.Cms.csproj" />
