--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/Directory.Packages.props
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/Directory.Packages.props
@@ -10,6 +10,6 @@
     <PackageVersion Include="Serilog.Sinks.Async" Version="2.1.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="10.1.0" />
     <PackageVersion Include="ZiggyCreatures.FusionCache.AspNetCore.OutputCaching" Version="2.5.0" />
-    <PackageVersion Include="ZiggyCreatures.FusionCache.Serialization.NeueccMessagePack" Version="2.5.0" />
+    <PackageVersion Include="ZiggyCreatures.FusionCache.Serialization.CysharpMemoryPack" Version="2.5.0" />
   </ItemGroup>
 </Project>
