--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/appsettings.json
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.Cms/src/UmbracoHeadlessBFF.Cms.Web/appsettings.json
@@ -10,15 +10,22 @@
   },
   "Serilog": {
     "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Async",
+      "Serilog.Sinks.OpenTelemetry",
       "Serilog.Enrichers.ClientInfo",
-      "Serilog.Expressions",
+      "Serilog.Enrichers.Process",
       "Serilog.Exceptions"
     ],
     "MinimumLevel": {
       "Default": "Warning",
       "Override": {
         "Microsoft": "Warning",
+        "Microsoft.AspNetCore.Hosting": "Warning",
+        "Microsoft.AspNetCore.Mvc": "Warning",
+        "Microsoft.AspNetCore.Routing": "Warning",
         "Microsoft.Hosting.Lifetime": "Information",
+        "ZiggyCreatures.Caching.Fusion.FusionCache": "Error",
         "System": "Warning"
       }
     },
@@ -28,7 +35,6 @@
       "WithClientIp",
       "FromLogContext",
       "WithExceptionDetails",
-      "FromLogContext",
       {
         "Name": "WithCorrelationId",
         "Args": {
@@ -50,25 +56,22 @@
         }
       }
     ],
-    "WriteTo": [
-      {
+    "WriteTo": {
+      "Async": {
         "Name": "Async",
         "Args": {
-          "configure": [
-            {
-              "Name": "Console",
+          "configure": {
+            "Console": "Console",
+            "Otel": {
+              "Name": "OpenTelemetry",
               "Args": {
-                "formatter": {
-                  "type": "Serilog.Templates.ExpressionTemplate, Serilog.Expressions",
-                  "template": "[{@t:HH:mm:ss} {@l:u3}] [Site Host: {@p['siteHost']} | Site Path: {@p['sitePath']}] [TraceId: {@tr} | SpanId: {@sp}] [Correlation Id: {@p['correlationId']}] {@m}\n{@x}",
-                  "theme": "Serilog.Templates.Themes.TemplateTheme::Code, Serilog.Expressions"
-                }
+                "OnBeginSuppressInstrumentation": "OpenTelemetry.SuppressInstrumentationScope::Begin, OpenTelemetry"
               }
             }
-          ]
+          }
         }
       }
-    ]
+    }
   },
   "Umbraco": {
     "CMS": {
