--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/src/UmbracoHeadlessBFF.SiteApi.Web/UmbracoHeadlessBFF.SiteApi.Web.csproj
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/src/UmbracoHeadlessBFF.SiteApi.Web/UmbracoHeadlessBFF.SiteApi.Web.csproj
@@ -6,9 +6,13 @@
     <PackageReference Include="Scalar.AspNetCore" />
     <PackageReference Include="Serilog.AspNetCore" />
     <PackageReference Include="Serilog.Enrichers.ClientInfo" />
+    <PackageReference Include="Serilog.Enrichers.Process" />
+    <PackageReference Include="Serilog.Enrichers.Thread" />
     <PackageReference Include="Serilog.Exceptions" />
-    <PackageReference Include="Serilog.Expressions" />
+    <PackageReference Include="Serilog.Settings.Configuration" />
     <PackageReference Include="Serilog.Sinks.Async" />
+    <PackageReference Include="Serilog.Sinks.Console" />
+    <PackageReference Include="Serilog.Sinks.OpenTelemetry" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
   </ItemGroup>
 
