--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/src/UmbracoHeadlessBFF.SiteApi.Web/appsettings.json
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/src/UmbracoHeadlessBFF.SiteApi.Web/appsettings.json
@@ -36,13 +36,24 @@
     "Using": [
       "Serilog.Sinks.Console",
       "Serilog.Sinks.Async",
+      "Serilog.Sinks.OpenTelemetry",
       "Serilog.Enrichers.ClientInfo",
-      "Serilog.Expressions",
+      "Serilog.Enrichers.Process",
+      "Serilog.Enrichers.Thread",
       "Serilog.Exceptions"
     ],
     "Enrich": [
+      "WithProcessId",
+      "WithThreadId",
+      "WithClientIp",
       "FromLogContext",
       "WithExceptionDetails",
+      {
+        "Name": "WithCorrelationId",
+        "Args": {
+          "addValueIfHeaderAbsence": true
+        }
+      },
       {
         "Name": "WithRequestHeader",
         "Args": {
@@ -70,25 +81,22 @@
         "System": "Warning"
       }
     },
-    "WriteTo": [
-      {
+    "WriteTo": {
+      "Async": {
         "Name": "Async",
         "Args": {
-          "configure": [
-            {
-              "Name": "Console",
+          "configure": {
+            "Console": "Console",
+            "Otel": {
+              "Name": "OpenTelemetry",
               "Args": {
-                "formatter": {
-                  "type": "Serilog.Templates.ExpressionTemplate, Serilog.Expressions",
-                  "template": "[{@t:HH:mm:ss} {@l:u3}] [Site Host: {@p['siteHost']} | Site Path: {@p['sitePath']}] [TraceId: {@tr} | SpanId: {@sp}] [Correlation Id: {@p['correlationId']}] {@m}\n{@x}",
-                  "theme": "Serilog.Templates.Themes.TemplateTheme::Code, Serilog.Expressions"
-                }
+                "OnBeginSuppressInstrumentation": "OpenTelemetry.SuppressInstrumentationScope::Begin, OpenTelemetry"
               }
             }
-          ]
+          }
         }
       }
-    ]
+    }
   },
   "AllowedHosts": "*"
 }
