--- a/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/src/UmbracoHeadlessBFF.SiteApi.Web/appsettings.json
+++ b/project-templates/content/umbraco-headless-bff/UmbracoHeadlessBFF.SiteApi/src/UmbracoHeadlessBFF.SiteApi.Web/appsettings.json
@@ -9,26 +9,25 @@
       }
     }
   },
-  //Timers are in seconds by default unless stated otherwise by the variable names (xxxMs, xxxMin, etc)
   "Caching": {
     "Enabled": true,
     "Default": {
-      "Duration": 7200,
-      "DurationDistributed": 86400,
-      "NullDuration": 60,
-      "DistributedCacheCircuitBreakerDuration": 10,
+      "Duration": "1.00:00:00",
+      "DurationDistributed": "7.00:00:00",
+      "NullDuration": "00:01:00",
+      "DistributedCacheCircuitBreakerDuration": "00:00:00",
       "FailSafeIsEnabled": true,
-      "FailSafeMaxDuration": 10800,
-      "DistributedCacheFailSafeMaxDuration": 93600,
+      "FailSafeMaxDuration": "1.12:00:00",
+      "DistributedCacheFailSafeMaxDuration": "8.00:00:00",
       "DistributedLocking": false,
-      "FailSafeThrottleDuration": 300,
-      "FactorySoftTimeoutMs": 150,
-      "FactoryHardTimeout": 30,
-      "DistributedCacheSoftTimeoutMs": 150,
-      "DistributedCacheHardTimeout": 5,
+      "FailSafeThrottleDuration": "00:05:00",
+      "FactorySoftTimeoutMs": "00:00:00.150",
+      "FactoryHardTimeout": "00:00:30",
+      "DistributedCacheSoftTimeoutMs": "00:00:00.150",
+      "DistributedCacheHardTimeout": "00:00:05",
       "AllowBackgroundDistributedCacheOperations": true,
       "AllowBackgroundBackplaneOperations": true,
-      "JitterMaxDuration": 300,
+      "JitterMaxDuration": "00:05:00",
       "EagerRefreshThreshold": 0.75
     }
   },
